Пофіксив баги згенеровані за допомогою ФайндБага